fixes missing space

--- a/pre/stylus/main.styl
+++ b/pre/stylus/main.styl
@@ -340,6 +340,7 @@ footer
     font-weight 800
   .love
     margin-left 3px
+    margin-right 3px
     &:hover
       color alpha(red, 1)
       text-shadow none
